@@ -1621,11 +1621,9 @@ struct liststruct {
 #define MODE_NOCOLOR		0x40000
 #define MODE_OPERONLY   	0x80000
 #define MODE_ADMONLY   		0x100000
-#define MODE_NOKICKS   		0x200000
 #define MODE_STRIP	   	0x400000
 #define MODE_NOKNOCK		0x800000
 #define MODE_NOINVITE  		0x1000000
-#define MODE_FLOODLIMIT		0x2000000
 #define MODE_MODREG		0x4000000
 #define MODE_INVEX		0x8000000
 #define MODE_NOCTCP		0x10000000
