@@ -98,9 +98,10 @@ CMD_FUNC(m_kick)
 {
 	aClient *who;
 	aChannel *chptr;
-	int  chasing = 0;
-	char *comment, *name, *p = NULL, *user, *p2 = NULL;
+	int  chasing = 0, breakit;
+	char *comment, *name, *p = NULL, *user, *p2 = NULL, *badkick;
 	Membership *lp;
+	Hook *h;
 
 	if (parc < 3 || *parv[1] == '\0')
 	{
@@ -175,28 +176,41 @@ CMD_FUNC(m_kick)
 					}
 				}
 
-				if (chptr->mode.mode & MODE_NOKICKS)
-				{
-					if (!op_can_override(sptr))
-					{
-						if (!MyClient(sptr))
-							goto attack; /* lag? yes.. kick crossing +Q... allow */
-						sendto_one(sptr, err_str(ERR_CANNOTDOCOMMAND),
-							   me.name, sptr->name, "KICK",
-							   "channel is +Q");
-						goto deny;
-					}
-					sendto_snomask(SNO_EYES,
-						"*** OperOverride -- %s (%s@%s) KICK %s %s (%s)",
-						sptr->name, sptr->user->username, sptr->user->realhost,
-						chptr->chname, who->name, comment);
-					ircd_log(LOG_OVERRIDE,"OVERRIDE: %s (%s@%s) KICK %s %s (%s)",
-						sptr->name, sptr->user->username, sptr->user->realhost,
-						chptr->chname, who->name, comment);
-					goto attack; /* No reason to continue.. */
-				}
 				/* Store "who" access flags */
 				who_flags = get_access(who, chptr);
+
+				badkick = NULL;
+				for (h = Hooks[HOOKTYPE_CAN_KICK]; h; h = h->next) {
+					badkick = (*(h->func.pcharfunc))(sptr,who,chptr,comment, sptr_flags, who_flags);
+					if (badkick)
+						break;
+				}
+				
+				if (badkick)
+				{
+					/* If set it means 'not allowed to kick'.. now check if (s)he can override.. */
+					
+					if (op_can_override(sptr))
+					{
+						sendto_snomask(SNO_EYES,
+							"*** OperOverride -- %s (%s@%s) KICK %s %s (%s)",
+							sptr->name, sptr->user->username, sptr->user->realhost,
+							chptr->chname, who->name, comment);
+						ircd_log(LOG_OVERRIDE,"OVERRIDE: %s (%s@%s) KICK %s %s (%s)",
+							sptr->name, sptr->user->username, sptr->user->realhost,
+							chptr->chname, who->name, comment);
+						goto attack; /* all other checks don't matter anymore (and could cause double msgs) */
+					} else {
+						/* Not an oper overriding */
+						if (MyClient(sptr))
+						{
+							/* Send the error message prepared by the can_kick hook and deny the kick */
+							sendto_one(sptr, "%s", badkick);
+							continue;
+						}
+					}
+				}
+
 				/* we are neither +o nor +h, OR..
 				 * we are +h but victim is +o, OR...
 				 * we are +h and victim is +h
